# Niibot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lintstagedignore  .lintstagedrc  CHANGES_SUMMARY.md  CLAUDE.md  DOCKER_GUIDE.md  PERSONAL_CLOCK_USAGE.md  PRE_UPDATE_CHECKLIST.md  README.md  REFACTOR_ROADMAP.md  RENDER_DEPLOYMENT.md  RENDER_FREE_DEPLOYMENT.md  RENDER_SETUP_CHECKLIST.md  SYSTEM_ARCHITECTURE.md  TWITCH_VERSION_FIX.md  UPDATE_PROGRESS_LOG.md  UPGRADE_GUIDE.md  bot.py  bot.py.backup  bot_refactor_execution.md  bot_refactor_plan.md  check_twitchio_version.py  command_validation_report.md  commitlint.config.js  config_local.py  config_prod.py  copy_to_local.bat  docker-compose.yml  game_command_guide.md  install_deps.sh  keep_alive.py  main.py  manage_conduits.py  niibot_architecture_analysis_2025.md  package-lock.json  package.json  render.yaml.example  (+8 more)
.claude/: settings.local.json
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REFACTORING.md  pyproject.toml  requirements.txt
backend/api/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  app.py  config.py  main.py  requirements.txt
backend/api/core/: __init__.py  config.py  database.py  dependencies.py  logging.py
backend/api/routers/: __init__.py  analytics_router.py  auth.py  auth_router.py  bots_router.py  channels.py  channels_router.py  commands.py  commands_router.py  events_router.py  game_queue_router.py  message_triggers_router.py  stats.py  stats_router.py  timers_router.py  video_queue_router.py
backend/api/services/: __init__.py  analytics_service.py  auth.py  auth_service.py  channel.py  channel_service.py  command_config_service.py  database.py  discord_api.py  event_config_service.py  game_queue_service.py  message_trigger_service.py  timer_service.py  twitch.py  twitch_api.py  user.py
backend/data/: 8ball_responses.json  eat.json  embed.json  fortune.json  fortunes.json  games.json  giveaway.json  tarot.json
backend/discord/: .env.example  Dockerfile  README.md  bot.py  config.py  http_server.py  rate_limiter.py  run.py
backend/discord/cogs/: __init__.py  admin.py  ai.py  birthday.py  eat.py  events.py  fortune.py  fun.py  games.py  giveaway.py  main.py  moderation.py  rate_limit_monitor.py  tarot.py  tft.py  utility.py
backend/discord/cogs/birthday/: __init__.py  cog.py  constants.py  views.py
backend/discord/cogs/eat/: __init__.py  cog.py  constants.py  views.py
backend/discord/core/: __init__.py  config.py  health_server.py  logging.py  rate_limiter.py
backend/discord/database/: __init__.py  birthday.py  connection.py  schema.sql
backend/discord/scripts/: clear_commands.py  cmd_ls.py  cmd_rm.py  list_commands.py
backend/scripts/: clear_test_data.py  db_backfill_sessions.py  db_check.py  db_clear_test_data.py  db_migrate.py  db_seed.py  db_tokens.py  dc_ls.py  dc_rm.py  run_migration.py  seed_test_sessions.py  tw_oauth.py  twitch_oauth.py
backend/shared/: __init__.py  cache.py  database.py
backend/shared/migrations/: __init__.py  runner.py
backend/shared/migrations/versions/: 000_initial_schema.sql  001_add_game_id.sql  002_fix_channel_constraints.sql  003_new_token_notify.sql  004_add_chatter_stats.sql  005_add_event_configs.sql  006_add_command_and_redemption_configs.sql  007_add_command_aliases.sql  008_add_channel_default_cooldowns.sql  009_simplify_cooldown_and_redirect.sql  010_set_default_cooldowns.sql  011_fix_cooldowns_and_cleanup.sql  012_add_users_table.sql  013_add_event_options.sql  014_config_change_notify.sql  015_add_game_queue.sql  016_fix_function_search_path.sql  017_add_timers.sql  018_add_message_triggers.sql  019_cleanup_rk_command.sql  020_add_trigger_usage_count.sql  021_add_video_queue.sql
backend/shared/models/: __init__.py  analytics.py  birthday.py  channel.py  command_config.py  event_config.py  game_queue.py  message_trigger.py  timer.py  video_queue.py
backend/shared/repositories/: __init__.py  analytics.py  birthday.py  channel.py  command_config.py  event_config.py  game_queue.py  message_trigger.py  timer.py  video_queue.py
backend/twitch/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  health_server.py  main.py  manage_conduits.py  mypy.ini  requirements.txt
backend/twitch/components/: ai.py  channel_points.py  chat_gpt.py  cmds.py  command_manager.py  event.py  game_queue.py  owner_cmds.py  sukaoMao.py  tarot.py  tft.py  timer_manager.py  video_queue_manager.py
backend/twitch/core/: __init__.py  bot.py  config.py  database.py  guards.py  health_server.py  logging.py  pg_listener.py  subscriptions.py
backend/twitch/database/: analytics.py  analytics_schema.sql  insert_test_data_fixed.sql  schema.sql
backend/twitch/database/migrations/: 001_add_game_info.sql  README.md
backend/twitch/docs/: DEPLOYMENT.md  README.md  SETUP_GUIDE.md  TWITCHIO3_API.md
backend/twitch/scripts/: config.py  oauth.py  tokens.py
cogs/: admin_commands.py  bot_status.py  clear.py  clock.py  clock_old.py  clock_v2_design.py  daily.py  draw.py  eat.py  emojitool.py  event.py  listener.py  main.py  party.py  permissions_admin.py  reply.py  repo.py  repo_simple.py  system_commands.py  team.py  tinder.py  twitter_monitor.py  user.md
(+208 files in other folders)
