[project]
name = "niibot-backend"
version = "0.1.0"
description = "FastAPI backend for Discord and Twitch bots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "discord-py>=2.6.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "openai>=2.16.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "twitchio>=3.2.1",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = [
    "E501",  # 行長由 formatter 處理
    "B008",  # 允許 FastAPI 的 Depends()
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
cache_dir = ".cache/mypy" # 集中管理快取
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

# --- 針對 Discord (cogs) 實施嚴格檢查 ---
[[tool.mypy.overrides]]
module = ["discord.*", "cogs.*"]
disallow_untyped_defs = true
warn_return_any = true

# --- 針對其他庫保持彈性 ---
[[tool.mypy.overrides]]
module = ["twitchio.*", "components.*", "asyncpg.*", "openai.*", "aiohttp.*"]
disallow_untyped_defs = false
