[project]
name = "niibot-backend"
version = "0.1.0"
description = "FastAPI backend for Discord and Twitch bots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0,<1.0.0",
    "cachetools>=7.0.1,<8.0.0",
    "discord-py[voice]>=2.6.0,<3.0.0",
    "fastapi>=0.129.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pyjwt[crypto]>=2.11.0,<3.0.0",
    "openai>=2.21.0,<3.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "rich>=14.0.0,<15.0.0",
    "twitchio>=3.2.0,<4.0.0",
    "uvicorn[standard]>=0.41.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "aiohttp>=3.13.0,<4.0.0",
    "mypy>=1.19.0,<2.0.0",
    "types-aiofiles>=25.0.0",
    "ruff>=0.15.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = ".cache/ruff"
src = ["api", "discord", "twitch", "shared"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = [
    "E501",  # 行長由 formatter 處理
    "B008",  # 允許 FastAPI 的 Depends()
]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "cogs",
    "components",
    "config",
    "core",
    "database",
    "health_server",
    "http_server",
    "rate_limiter",
    "routers",
    "services",
    "shared",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
cache_dir = ".cache/mypy" # 集中管理快取
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

# --- 針對 Discord (cogs) 實施嚴格檢查 ---
[[tool.mypy.overrides]]
module = ["discord.*", "cogs.*"]
disallow_untyped_defs = true
warn_return_any = true

# --- 針對其他庫保持彈性 ---
[[tool.mypy.overrides]]
module = ["twitchio.*", "components.*", "asyncpg.*", "openai.*", "aiohttp.*"]
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "cachetools>=7.0.1",
    "types-cachetools>=6.2.0.20251022",
]
